ci-cd/continuous-deployment/comparison-among-strategies/blue-green/multiple-service/my-app-blue.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-app-blue
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
    version: blue
  ports:
  - name: http
    port: 80
    targetPort: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-app-blue
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      version: blue
  template:
    metadata:
      labels:
        app: my-app
        version: blue
    spec:
      containers:
      - name: my-app
        image: devchloe/my-app:1.0
        ports:
        - name: http
          containerPort: 8080
