ci-cd/continuous-deployment/comparison-among-strategies/blue-green/multiple-service/my-app-green.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-app-green
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
    version: green
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: my-app
      version: green
  template:
    metadata:
      labels:
        app: my-app
        version: green
    spec:
      containers:
      - name: http
        image: devchloe/my-app:2.0
        ports:
        - name: http
          containerPort: 8080
